fixtures/negative/schema_deep_path.inc
---
[MUST]
a.b.c = String
---
